--- a/Demo.DIYControl/themes/ColorPicker.xaml
+++ b/Demo.DIYControl/themes/ColorPicker.xaml
@@ -1,13 +1,18 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:local="clr-namespace:Demo.DIYControl.themes"
                     xmlns:control="clr-namespace:Demo.DIYControl.Controls.DeepInDIY">
+
+    <!--default style of colorpicker-->
     <Style TargetType="{x:Type control:ColorPicker}">
+        <Setter Property="Padding" Value="3"/>
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type control:ColorPicker}">
                     <Border BorderThickness="{TemplateBinding BorderThickness}"
-                            Background="{TemplateBinding Background}">
+                            Background="{TemplateBinding Background}"
+                            BorderBrush="{TemplateBinding BorderBrush}"
+                            Padding="{TemplateBinding Padding}"
+                            CornerRadius="{TemplateBinding CornerRadius}">
                         <Grid>
                             <Grid.RowDefinitions>
                                 <RowDefinition />
@@ -22,13 +27,23 @@
                                 <Style TargetType="Slider">
                                     <Setter Property="VerticalAlignment"
                                             Value="Center"/>
-                                    <Setter Property="Margin" Value="5 0"/>
+                                    <Setter Property="Margin" Value="5 3"/>
                                     <Setter Property="Maximum" Value="255"/>
+                                    <Setter Property="MinWidth" Value="80"/>
                                 </Style>
                             </Grid.Resources>
-                            <Slider Grid.Row="0"/>
-                            <Slider Grid.Row="1"/>
-                            <Slider Grid.Row="2"/>
+                            <Slider x:Name="PART_RedSlider" Grid.Row="0"/>
+                            <Slider x:Name="PART_GreenSlider" Grid.Row="1"/>
+                            <Slider x:Name="PART_BlueSlider" Grid.Row="2"/>
+
+                            <Rectangle Grid.RowSpan="3"
+                                       Grid.Column="1"
+                                       MinWidth="40"
+                                       Margin="5">
+                                <Rectangle.Fill>
+                                    <SolidColorBrush x:Name="PART_PreviewBrush"/>
+                                </Rectangle.Fill>
+                            </Rectangle>
                         </Grid>
                     </Border>
                 </ControlTemplate>
