--- a/Demo.DIYControl/themes/generic.xaml
+++ b/Demo.DIYControl/themes/generic.xaml
@@ -1,4 +1,7 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-    
+    <ResourceDictionary.MergedDictionaries>
+        <ResourceDictionary Source="/Demo.DIYControl;component/themes/ColorPicker.xaml"/>
+        <ResourceDictionary Source="/Demo.DIYControl;component/themes/FlipPannel.xaml"/>
+    </ResourceDictionary.MergedDictionaries>
 </ResourceDictionary>
