--- a/Demo.DIYControl/Views/FlipPannelDemoPage.xaml
+++ b/Demo.DIYControl/Views/FlipPannelDemoPage.xaml
@@ -7,13 +7,19 @@
       mc:Ignorable="d" 
       Title="FlipPannelDemoPage">
     <Grid>
-        <ctrl:FlipPannel>
-            <ctrl:FlipPannel.FrontContent>
-                <TextBlock>这是正面</TextBlock>
-            </ctrl:FlipPannel.FrontContent>
-            <ctrl:FlipPannel.BackContent>
-                <TextBlock Text="这是反面"></TextBlock>
-            </ctrl:FlipPannel.BackContent>
-        </ctrl:FlipPannel>
+        
+            <ctrl:FlipPannel MaxWidth="300"
+                         MaxHeight="280"
+                         Padding="5"
+                         CornerRadius="3"
+                             Background="White">
+                <ctrl:FlipPannel.FrontContent>
+                    <TextBlock Text="这是正面"/>
+                </ctrl:FlipPannel.FrontContent>
+                <ctrl:FlipPannel.BackContent>
+                    <TextBlock Text="这是反面"/>
+                </ctrl:FlipPannel.BackContent>
+            </ctrl:FlipPannel>
+        
     </Grid>
 </Page>
