--- a/Demo.DIYControl/themes/FlipPannel.xaml
+++ b/Demo.DIYControl/themes/FlipPannel.xaml
@@ -7,6 +7,7 @@
         <Setter Property="BorderThickness" Value="0"/>
         <Setter Property="HorizontalContentAlignment" Value="Center"/>
         <Setter Property="VerticalContentAlignment" Value="Center"/>
+        <Setter Property="IsTabStop" Value="False"/>
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type ToggleButton}">
@@ -31,17 +32,53 @@
     </Style>
 
     <Style TargetType="{x:Type control:FlipPannel}">
+        <Setter Property="IsTabStop" Value="False"/>
+        <Setter Property="BorderBrush" Value="Black"/>
+        <Setter Property="BorderThickness" Value="0"/>
+        <Setter Property="Padding" Value="3"/>
+
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type control:FlipPannel}">
+                    <ControlTemplate.Resources>
+                        <Storyboard x:Key="SetArrowColor">
+                            <ColorAnimationUsingKeyFrames Storyboard.TargetProperty="(Shape.Fill).(SolidColorBrush.Color)" Storyboard.TargetName="ArrowPath">
+                                <EasingColorKeyFrame KeyTime="0:0:0.2" Value="#FF2DB6A3">
+                                    <EasingColorKeyFrame.EasingFunction>
+                                        <QuadraticEase EasingMode="EaseIn"/>
+                                    </EasingColorKeyFrame.EasingFunction>
+                                </EasingColorKeyFrame>
+                            </ColorAnimationUsingKeyFrames>
+                        </Storyboard>
+                        <Storyboard x:Key="ScaleArrow">
+                            <DoubleAnimationUsingKeyFrames Storyboard.TargetProperty="(UIElement.RenderTransform).(TransformGroup.Children)[0].(ScaleTransform.ScaleX)" Storyboard.TargetName="PART_FlipButton">
+                                <EasingDoubleKeyFrame KeyTime="0:0:0.1" 
+                                                      Value="0.8">
+                                    <EasingDoubleKeyFrame.EasingFunction>
+                                        <QuadraticEase EasingMode="EaseIn"/>
+                                    </EasingDoubleKeyFrame.EasingFunction>
+                                </EasingDoubleKeyFrame>
+                            </DoubleAnimationUsingKeyFrames>
+                            <DoubleAnimationUsingKeyFrames Storyboard.TargetProperty="(UIElement.RenderTransform).(TransformGroup.Children)[0].(ScaleTransform.ScaleY)" Storyboard.TargetName="PART_FlipButton">
+                                <EasingDoubleKeyFrame KeyTime="0:0:0.1" 
+                                                      Value="0.8">
+                                    <EasingDoubleKeyFrame.EasingFunction>
+                                        <QuarticEase EasingMode="EaseIn"/>
+                                    </EasingDoubleKeyFrame.EasingFunction>
+                                </EasingDoubleKeyFrame>
+                            </DoubleAnimationUsingKeyFrames>
+                        </Storyboard>
+                    </ControlTemplate.Resources>
                     <Border BorderBrush="{TemplateBinding BorderBrush}"
                             BorderThickness="{TemplateBinding BorderThickness}"
-                            Background="{TemplateBinding Background}">
+                            Background="{TemplateBinding Background}"
+                            CornerRadius="{TemplateBinding CornerRadius}"
+                            Effect="{TemplateBinding Effect}">
                         <VisualStateManager.VisualStateGroups>
                             <VisualStateGroup x:Name="ViewStates">
                                 <VisualStateGroup.Transitions>
                                     <VisualTransition From="Fliped" 
-                                                      GeneratedDuration="0:0:0.7" 
+                                                      GeneratedDuration="0:0:0.3" 
                                                       To="Normal">
                                         <VisualTransition.GeneratedEasingFunction>
                                             <SineEase EasingMode="EaseIn"/>
@@ -49,12 +86,17 @@
                                         <Storyboard>
                                             <DoubleAnimation Duration="0" 
                                                              To="0" 
-                                                             Storyboard.TargetProperty="(UIElement.Opacity)" Storyboard.TargetName="contentPresenter1">
+                                                             Storyboard.TargetProperty="(UIElement.Opacity)" Storyboard.TargetName="BackContent">
                                                 <DoubleAnimation.EasingFunction>
                                                     <SineEase EasingMode="EaseIn"/>
                                                 </DoubleAnimation.EasingFunction>
                                             </DoubleAnimation>
-                                            <DoubleAnimation Duration="0" Storyboard.TargetProperty="(UIElement.Opacity)" Storyboard.TargetName="contentPresenter">
+                                            <DoubleAnimation Duration="0" Storyboard.TargetProperty="(UIElement.Opacity)" Storyboard.TargetName="FrontContent">
+                                                <DoubleAnimation.EasingFunction>
+                                                    <SineEase EasingMode="EaseIn"/>
+                                                </DoubleAnimation.EasingFunction>
+                                            </DoubleAnimation>
+                                            <DoubleAnimation Duration="0:0:0.3" To="0" Storyboard.TargetProperty="(UIElement.RenderTransform).(TransformGroup.Children)[2].(RotateTransform.Angle)" Storyboard.TargetName="PART_FlipButton">
                                                 <DoubleAnimation.EasingFunction>
                                                     <SineEase EasingMode="EaseIn"/>
                                                 </DoubleAnimation.EasingFunction>
@@ -62,22 +104,22 @@
                                         </Storyboard>
                                     </VisualTransition>
                                     <VisualTransition From="Normal" 
-                                                      GeneratedDuration="0:0:0.7" 
+                                                      GeneratedDuration="0:0:0.3" 
                                                       To="Fliped">
                                         <VisualTransition.GeneratedEasingFunction>
                                             <SineEase EasingMode="EaseOut"/>
                                         </VisualTransition.GeneratedEasingFunction>
                                         <Storyboard>
-                                            <DoubleAnimation Duration="0:0:0.7" 
+                                            <DoubleAnimation Duration="0:0:0.3" 
                                                              From="0" 
                                                              To="180" 
                                                              Storyboard.TargetProperty="(UIElement.RenderTransform).(TransformGroup.Children)[2].(RotateTransform.Angle)" 
                                                              Storyboard.TargetName="PART_FlipButton"/>
-                                            <DoubleAnimation Duration="0:0:0.0" From="0" 
+                                            <DoubleAnimation Duration="0" From="0" 
                                                              Storyboard.TargetProperty="(UIElement.Opacity)" 
-                                                             Storyboard.TargetName="contentPresenter1" 
+                                                             Storyboard.TargetName="BackContent" 
                                                              To="1"/>
-                                            <DoubleAnimation Duration="0" To="0" Storyboard.TargetProperty="(UIElement.Opacity)" Storyboard.TargetName="contentPresenter">
+                                            <DoubleAnimation Duration="0" To="0" Storyboard.TargetProperty="(UIElement.Opacity)" Storyboard.TargetName="FrontContent">
                                                 <DoubleAnimation.EasingFunction>
                                                     <SineEase EasingMode="EaseOut"/>
                                                 </DoubleAnimation.EasingFunction>
@@ -92,7 +134,7 @@
                                             <EasingDoubleKeyFrame KeyTime="0" Value="180"/>
                                         </DoubleAnimationUsingKeyFrames>
                                         <DoubleAnimationUsingKeyFrames Storyboard.TargetProperty="(UIElement.Opacity)" 
-                                                                       Storyboard.TargetName="contentPresenter">
+                                                                       Storyboard.TargetName="FrontContent">
                                             <EasingDoubleKeyFrame KeyTime="0" Value="0"/>
                                         </DoubleAnimationUsingKeyFrames>
                                     </Storyboard>
@@ -104,7 +146,7 @@
                                             <EasingDoubleKeyFrame KeyTime="0" Value="0"/>
                                         </DoubleAnimationUsingKeyFrames>
                                         <DoubleAnimationUsingKeyFrames Storyboard.TargetProperty="(UIElement.Opacity)" 
-                                                                       Storyboard.TargetName="contentPresenter1">
+                                                                       Storyboard.TargetName="BackContent">
                                             <EasingDoubleKeyFrame KeyTime="0" Value="0"/>
                                         </DoubleAnimationUsingKeyFrames>
                                     </Storyboard>
@@ -118,16 +160,20 @@
                                 <RowDefinition Height="Auto"/>
                             </Grid.RowDefinitions>
 
-                            <ContentPresenter x:Name="contentPresenter1" Margin="{TemplateBinding Padding}" 
+                            <ContentPresenter x:Name="BackContent" 
+                                              Margin="{TemplateBinding Padding}" 
                                             Content="{TemplateBinding BackContent}"/>
 
-                            <ContentPresenter x:Name="contentPresenter" Margin="{TemplateBinding Padding}" 
+                            <ContentPresenter x:Name="FrontContent" 
+                                              Margin="{TemplateBinding Padding}" 
                                             Content="{TemplateBinding FrontContent}"/>
 
                             <ToggleButton x:Name="PART_FlipButton" 
                                           Grid.Row="1" 
+                                          Margin="3,0,3,3"
                                           Style="{StaticResource FlipPannelToggleBtn}" 
-                                          RenderTransformOrigin="0.5,0.5">
+                                          RenderTransformOrigin="0.5,0.5" 
+                                          HorizontalAlignment="Right">
                                 <ToggleButton.RenderTransform>
                                     <TransformGroup>
                                         <ScaleTransform/>
@@ -137,18 +183,38 @@
                                     </TransformGroup>
                                 </ToggleButton.RenderTransform>
 
-                                <Path HorizontalAlignment="Center"
+                                <Path x:Name="ArrowPath" HorizontalAlignment="Center"
                                       VerticalAlignment="Center" 
                                       Stretch="Uniform"
-                                      Fill="{TemplateBinding Foreground}" 
+                                      Fill="Black" 
                                       Data="M5.59,7.41L7,6L13,12L7,18L5.59,16.59L10.17,12L5.59,7.41M11.59,7.41L13,6L19,12L13,18L11.59,16.59L16.17,12L11.59,7.41Z"/>
 
                             </ToggleButton>
                         </Grid>
                     </Border>
+                    <ControlTemplate.Triggers>
+                        <Trigger Property="IsPressed" Value="True" SourceName="PART_FlipButton">
+                            <Trigger.ExitActions>
+                                <StopStoryboard BeginStoryboardName="ScaleArrow_BeginStoryboard"/>
+                            </Trigger.ExitActions>
+                            <Trigger.EnterActions>
+                                <BeginStoryboard x:Name="ScaleArrow_BeginStoryboard" Storyboard="{StaticResource ScaleArrow}"/>
+                            </Trigger.EnterActions>
+                        </Trigger>
+                        <Trigger Property="IsMouseOver" Value="True" SourceName="PART_FlipButton">
+                            <Trigger.ExitActions>
+                                <StopStoryboard BeginStoryboardName="SetArrowColor_BeginStoryboard"/>
+                            </Trigger.ExitActions>
+                            <Trigger.EnterActions>
+                                <BeginStoryboard x:Name="SetArrowColor_BeginStoryboard" Storyboard="{StaticResource SetArrowColor}"/>
+                            </Trigger.EnterActions>
+                            <Setter Property="Foreground" TargetName="PART_FlipButton" Value="Snow"/>
+                        </Trigger>
+                    </ControlTemplate.Triggers>
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
+        <Setter Property="Padding" Value="2,3,3,3"/>
     </Style>
 </ResourceDictionary>
     
